<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="onSend"
            type="android.view.View.OnClickListener" />
        <variable
            name="viewModel"
            type="cn.tyhyh.easeword.ui.viewmodel.FeedBackViewModel" />
    </data>

    <cn.tyhyh.easeword.ui.custom.DynamicBgLinearLayout
        android:id="@+id/dynamicBgContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:drawOffsetTop="@dimen/toolBarHeight"
        app:moveSpeed="2dp">

        <include
            android:id="@+id/toolbarBinding"
            layout="@layout/common_toolbar"
            bind:title="@{@string/feedback}" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="21dp">

            <EditText
                android:id="@+id/contactEv"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:lines="1"
                android:hint="@string/your_contact_hint"
                android:inputType="text"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textColorHint="#33000000"
                android:paddingHorizontal="16dp"
                android:text="@={viewModel.contact}"
                android:textColor="@color/colorCommonBlack"
                android:background="@drawable/feedback_ev_bg" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/feedbackEv"
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:textSize="14sp"
                android:textColorHint="#33000000"
                android:paddingHorizontal="16dp"
                android:paddingVertical="14dp"
                android:text="@={viewModel.feedback}"
                android:background="@drawable/feedback_ev_bg"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:lineHeight="28dp"
                android:hint="@string/your_feedback_hint" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/send"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="@{onSend}"
                android:background="@drawable/feedback_send_btn_bg"/>
            
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="287" />
        
    </cn.tyhyh.easeword.ui.custom.DynamicBgLinearLayout>

</layout>